# Machine-Unlearning-Comparator

./: README.md
backend/: pyproject.toml
backend/app/utils/: evaluation.py
