[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
python = "3.10"

[project]
name = "Machine-Unlearning-Comparator"
version = "0.1.0"  
description = "Machine Unlearning Comparator"
readme = "README.md"
requires-python = ">=3.10, <3.12"
license = "MIT"
keywords = []
authors = [
  { name = "gnueaj", email = "dlwodnd00@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "fastapi==0.109.0",  #
  "uvicorn==0.27.0",   #
  "torch==2.1.2",      # (CUDA 12.1)
  "torchvision==0.16.2", # (torch 2.1.2)
  "numpy==1.24.3",     #
  "umap-learn==0.5.5", #
  "scikit-learn==1.3.0", #
  "packaging>=21.0",
  "matplotlib",
  "python-multipart",
  "seaborn",
  "huggingface_hub",
  "pytorch-cka>=1.0.1",
]


[project.urls]
Documentation = "https://github.com/gnueaj/Machine-Unlearning-Comparator#readme"
Issues = "https://github.com/gnueaj/Machine-Unlearning-Comparator/issues"
Source = "https://github.com/gnueaj/Machine-Unlearning-Comparator"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/fastapi_resnet_cifar10 --cov=tests {args}"
no-cov = "cov --no-cov {args}"
start = "uvicorn main:app --reload"

[tool.hatch.envs.default.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
# start = "uvicorn main:app --reload"

[tool.hatch.build.targets.wheel] 
packages = ["app"]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
